<resources>
    <string name="app_name">Tourist Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_label">"Tourist Guide"</string>
    <string name="place_map">Map</string>
    <string name="place_detail">Place Detail</string>
    <string name="add_review">Add Review</string>
    <string name="view_review">View Review</string>
    <string name="wishlist">WishList</string>
    <string name="pass_hint">Type Your Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Not Registered Yet , Sign Up !</string>
    <string name="name_hint">Type your Name</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_reg">Already Registered , Sign In !</string>
    <string name="type_your_review">Type your Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="place_name">Name:</string>
    <string name="place_timing">Timing:</string>
    <string name="place_address">Address :</string>
    <string name="place_rating">Rating:</string>
    <string name="view_review_btn">View Review</string>
    <string name="add_review_btn">Add Review</string>
    <string name="welcome_txt">Welcome</string>
    <string name="hello">hello</string>
    <string name="search_bar_hint">Enter here to search</string>
    <string name="time_not_available">Not Available</string>
    <string name="update_profile">Update profile</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="enter_your_location">Enter your Location of Interest</string>
    <string name="add_tour_description">Add Tour description</string>
    <string name="add_tour_guide">Add tour Guide</string>
    <string name="enter_location_to_search">Enter location to search</string>
    <string name="search">search</string>
    <string name="book_guide">Book guide</string>
    <string name="checkout">Checkout</string>
    <string name="name">Name</string>
    <string name="enter_the_tour_price">Enter the tour price</string>
    <string name="enter_number_of_group_members">Enter number of group members</string>
    <string name="enter_tour_date">Enter Tour Date</string>
    <string name="price_type">Payment Type</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="enter_card_name">Enter Card Name</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_card_date">Expiry Date</string>
    <string name="enter_card_cvv">CVV</string>
    <string name="chat">Chat</string>
    <string name="members">Members</string>
    <string name="number_of_member">Number of Member :</string>
    <string name="booking_date">Booking Date</string>
    <string name="bookng_date">Bookng Date :</string>
    <string name="guide_name">Guide Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="chatting_channel">Chatting Channel</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_history">Booking History</string>
    <string name="booking_screen">Booking Screen</string>
    <string name="guide_profile">Guide Profile</string>
    <string name="guide_main">Guide_main</string>


</resources>