<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewBookingDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:id="@+id/customer_Name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Guide Name : "
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_name"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:id="@+id/guide_Name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookng_date"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_date"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:id="@+id/booking_Date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_member"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/members"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:id="@+id/tour_Member"/>
            </LinearLayout>


            <Button
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/chat"
                />
        </LinearLayout>


</LinearLayout>