<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GuideProfile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:scaleType="centerCrop"
                android:padding="2dp"
                app:layout_constraintBottom_toTopOf="@id/photoPicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/photoPicker"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintBottom_toTopOf="@id/email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.60"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_pic"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photoPicker">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guide_email"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_your_email"
                    android:enabled="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guide_name"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:hint="@string/name_hint"
                    android:enabled="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tel_layout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guide_tel"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loc_layout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tel_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guide_loc"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:hint="@string/enter_your_location"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loc_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guide_price"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_tour_price"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc_layout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guide_desc"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_tour_description"
                    android:inputType="textMultiLine"
                    android:gravity="start"
                    android:lines="5"
                    android:maxLines="5"
                    android:scrollbars="vertical"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/yellow"
                android:text="@string/update_profile"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>