<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_screen"
    tools:context=".HomeScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_txt"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border">

            <ImageButton
                android:id="@+id/search_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_baseline_search_24" />

            <EditText
                android:id="@+id/querySearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:hint="@string/search_bar_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">


            <ImageButton
                android:id="@+id/btn1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/food" />


            <ImageButton
                android:id="@+id/btn2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:padding="3dp"
                android:pointerIcon="hand"
                android:scaleType="fitCenter"
                android:src="@drawable/cafe" />


            <ImageButton
                android:id="@+id/btn3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/shop" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/grid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">


            <ImageButton
                android:id="@+id/btn4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/libary"
                tools:ignore="SpeakableTextPresentCheck" />


            <ImageButton
                android:id="@+id/btn5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/hospital" />


            <ImageButton
                android:id="@+id/btn6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fun"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/border2"
            android:padding="16dp"
            android:textColor="@color/white"
            android:visibility="invisible"

            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:fabCustomSize="70dp"
            android:src="@drawable/ic_baseline_add_24"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/add_tour_guide"
            android:layout_margin="16dp" />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>